# difference-generator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-and-test-check.yml
gendiff/: __init__.py  diff.py  gendiff_engine.py  generate_diff.py  parsing.py  stylish.py
gendiff/formatters/: __init__.py  format_utilities.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_error.py  test_gendiff.py  test_gendiff_engine.py  test_json.py  test_plain.py  test_stylish.py
tests/fixtures/: estimated_json_result.py  estimated_results.py  estimated_yaml_result.py  first_test_file.yml  flat_test_file2.json
tests/fixtures/estimated_results/: flat.txt
tests/fixtures/results/: flat_json.json  flat_json.txt  flat_plain.txt  flat_stylish.txt  nested_json.json  nested_json.txt
tests/fixtures/test_files/: flat_test_file1.json  flat_test_file2.yaml  unsupported_format.txt
